--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -127,6 +127,7 @@
 		overflow: hidden;
 		opacity: 0;
 		padding: 0;
+		visibility: hidden;
 		@include transition(all 0.5s ease);
 	}
 	& > ul {
@@ -181,6 +182,7 @@
 			padding: 0 10px 0 20px;
 			opacity: 1;
 			overflow: visible;
+			visibility: visible;
 			@include sizing(auto, auto);
 		}
 		& > ul > li .dropdown {
