--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
@@ -118,18 +118,25 @@
 ========================================================================== */
 
 .scroll-to-top, .scroll-to-bottom {
-	display: none;
+	display: block;
 	position: fixed;
 	right: 20px;
-	z-index: 100;
+	z-index: -1;
+	opacity: 0;
+	visibility: hidden;
 	@include sizing(40px, 40px);
 	border-radius: 3px;
 	background: $color-10;
 	padding: 10px;
 	text-align: center;
-	@include transition(background 0.3s ease-in-out);
+	@include transition(opacity 0.5s ease);
 	&, &:hover {
 		color: $color-01;
+	}
+	&.scroll-to-visible {
+		z-index: 1;
+		opacity: 1;
+		visibility: visible;
 	}
 }
 
