--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -36,6 +36,7 @@ $color-16: #591818; // red
 ========================================================================== */
 
 $base-font-size: 16;
+$global-font-size: 14px;
 $serif-fb: garamond, times new roman, serif;
 $sans-serif-fb: arial, sans-serif;
 $font-01: 'Fira Sans', $sans-serif-fb;
