--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -51,7 +51,7 @@
 		.site-quotes {
 			font-family: $font-02;
 			text-shadow: 1px 1px 0 rgba($color-02, 0.65), 1px 1px 5px rgba($color-02, 0.75);
-			font-size: rem(14px);
+			font-size: rem($global-font-size);
 			p {
 				margin: 0 0 10px 0;
 				&:last-child {
@@ -167,7 +167,7 @@
 				border-top: 0;
 				border-radius: 0;
 				.dropdown-contents {
-					font-size: rem(14px);
+					font-size: rem($global-font-size);
 				}
 			}
 			&.dropdown-left .dropdown {
@@ -241,7 +241,7 @@
 			font-size: rem(40px);
 		}
 		p {
-			font-size: rem(14px);
+			font-size: rem($global-font-size);
 		}
 		.character-level {
 			text-transform: uppercase;
