--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -215,72 +215,74 @@
 /* View Topic - Polls
 ========================================================================== */
 
-fieldset.polls dl dt {
-	width: 20%;
+fieldset.polls dl {
+	position: relative;
+	&.voted {
+		font-weight: bold;
+	}
+	dt, dd {
+		line-height: 22px;
+	}
+	dt {
+		width: 30%;
+	}
+	.poll_option_select {
+		& + .resultbar {
+			padding-left: 40px;
+		}
+	}
+	.poll_option_percent, .resultbar {
+		float: left;
+	}
+	.resultbar {
+		width: 50%;
+		div[class*='pollbar'] {
+			padding: 0 10px;
+			border-radius: 3px;
+			height: 22px;
+		}
+		div[style='width:0%;'], div[style='width: 0%;'] {
+			width: 20px !important;
+			padding: 0;
+			text-align: center;
+		}
+		.pollbar5 {
+			background: mix(white, $color-10, 10%);
+		}
+		.pollbar4 {
+			background: $color-10;
+		}
+		.pollbar3 {
+			background: mix(black, $color-10, 10%);
+		}
+		.pollbar2 {
+			background: mix(black, $color-10, 20%);
+		}
+		.pollbar1 {
+			background: mix(black, $color-10, 30%);
+		}
+	}
+	.poll_option_percent {
+		width: 20%;
+	}
+	.button1 {
+		margin: 0;
+	}
+}
+
+fieldset.polls dl .poll_option_select, #preview fieldset.polls dl dd {
+	position: absolute;
+	top: 1px;
+	left: 30%;
 }
 
 .topic_poll .panel {
-	min-height: 0 !important;
 	.content {
 		.author {
 			margin: 0;
 			.poll_max_votes {
 				display: block;
 				margin: 0 0 20px 0;
-			}
-		}
-		fieldset.polls dl {
-			position: relative;
-			&.voted {
-				font-weight: bold;
-			}
-			dt, dd {
-				line-height: 22px;
-			}
-			.poll_option_select {
-				position: absolute;
-				top: 1px;
-				left: 20%;
-				& + .resultbar {
-					padding-left: 40px;
-				}
-			}
-			.poll_option_percent, .resultbar {
-				float: left;
-			}
-			.resultbar {
-				width: 60%;
-				div[class*='pollbar'] {
-					padding: 0 10px;
-					border-radius: 3px;
-					height: 22px;
-				}
-				div[style='width:0%;'], div[style='width: 0%;'] {
-					width: 20px !important;
-					padding: 0;
-					text-align: center;
-				}
-				.pollbar5 {
-					background: mix(white, $color-10, 10%);
-				}
-				.pollbar4 {
-					background: $color-10;
-				}
-				.pollbar3 {
-					background: mix(black, $color-10, 10%);
-				}
-				.pollbar2 {
-					background: mix(black, $color-10, 20%);
-				}
-				.pollbar1 {
-					background: mix(black, $color-10, 30%);
-				}
-			}
-			.poll_option_percent {
-				width: 20%;
-			}
-			.button1 {
-				margin: 0;
 			}
 		}
 		.vote-submitted {
@@ -378,6 +380,13 @@ fieldset.polls dl dt {
 	}
 }
 
+/* View Topic - Topic Preview
+========================================================================== */
+
+#preview .inner .content {
+	flex: 1 1 100%;
+}
+
 /* View Topic - Topic Review
 ========================================================================== */
 
@@ -390,7 +399,7 @@ fieldset.polls dl dt {
 		right: 0;
 		font-family: $font-01;
 		font-variant: none;
-		font-size: rem(14px);
+		font-size: rem($global-font-size);
 	}
 }
 
