--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
@@ -13,9 +13,9 @@
 		margin: 0 0 20px 0;
 	}
 	#format-buttons {
-		margin: -5px 0 20px 0;
+		margin: 0 0 15px 0;
 		.button, select {
-			margin: 5px 0 0 0;
+			margin: 0 0 5px 0;
 		}
 		select {
 			width: auto;
