--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -122,9 +122,9 @@ input[type='search']::-webkit-search-cancel-button {
 
 fieldset.submit-buttons {
 	text-align: center;
-	margin: -10px 0 20px 0;
+	margin: 0 0 10px 0;
 	.button1, .button2, .button3 {
-		margin-top: 10px;
+		margin-bottom: 10px;
 	}
 }
 
