--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -285,6 +285,8 @@
 ========================================================================== */
 
 .action-bar {
+	// Always keep clearfix to account for weird margin collapse spacing
+	@include clearfix('&');
 	margin: -10px -5px 20px -5px;
 	@include flex-flow(row wrap);
 	align-items: center;
@@ -306,7 +308,7 @@
 		flex: 0 0 300px;
 	}
 	&.actions-jump {
-		margin-top: 20px;
+		margin-top: 0;
 		margin-bottom: $main-margin;
 		.jumpbox-return .icon {
 			width: auto;
@@ -315,6 +317,12 @@
 		& > br {
 			display: none;
 		}
+	}
+}
+
+.forabg, .panel {
+	& + .action-bar.actions-jump {
+		margin-top: -10px;
 	}
 }
 
