Responsive registration page styling

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
@@ -232,6 +232,8 @@ dl.faq + .top {
 		margin-left: 0;
 	}
 	.captcha-panel .captcha.captcha-image + dd {
+		margin-top: 10px;
+		margin-bottom: 10px;
 		@include flex-flow(row nowrap);
 		.inputbox {
 			@include flex(base);
