--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -12,7 +12,6 @@
 	min-height: 150px;
 	.navigation ul {
 		margin: 0;
-		list-style: none;
 		li {
 			margin: 0 0 5px 0;
 			a[href*='folder']:before {
@@ -98,7 +97,7 @@
 				label[for*='post_id_list_select'] {
 					margin: 2px 0 0 0;
 					input[type='checkbox'] {
-						margin: 0 0 0 5px;
+						margin: 0 0 0 $ffs;
 					}
 				}
 			}
@@ -225,12 +224,12 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 
 .cp-main {
 	label[for*='_width'], label[for*='_height'] {
-		margin: 0 5px 0 0;
+		margin: 0 $ffs 0 0;
 	}
 	#avatar_option_avatar_driver_gravatar, #avatar_option_avatar_driver_local,
 	#avatar_option_avatar_driver_remote, #avatar_option_avatar_driver_upload {
 		& > p {
-			margin: -10px 0 20px $form-field-indent1;
+			margin: -10px 0 20px $ffi-01;
 			font-style: italic;
 			font-size: rem(13px);
 		}
@@ -245,7 +244,7 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 				@include reset-font-size('&:before, select');
 				&:before {
 					content: 'Category:';
-					flex: 0 0 $form-field-indent1;
+					flex: 0 0 $ffi-01;
 				}
 				select {
 					@include flex(base);
@@ -356,7 +355,7 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 	select {
 		width: auto;
 		min-width: 80px;
-		margin: 0 5px;
+		margin: 0 $ffs;
 	}
 }
 
@@ -378,7 +377,7 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 		@include flex;
 	}
 	.button2 {
-		margin: 0 0 0 5px;
+		margin: 0 0 0 $ffs;
 	}
 }
 
@@ -387,7 +386,7 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 
 .cp-menu .cp-mini .mini .pm-legend {
 	position: relative;
-	padding: 0 0 0 27px;
+	padding: 0 0 0 21px;
 	.imageset {
 		display: block;
 		position: absolute;
@@ -426,7 +425,7 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 				margin: 0;
 			}
 			strong {
-				margin: 0 0 5px 0;
+				margin: 0 0 $ffs 0;
 				display: block;
 			}
 		}
@@ -437,17 +436,16 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 				padding: 0;
 			}
 		}
-		ul.recipients {
-			list-style: none;
-			margin: 0 -5px -5px -5px;
+		.recipients ul {
+			margin: -5px -5px 0 -5px;
 			li {
 				@include inline-block(middle);
-				margin: 0 5px 5px 5px;
+				margin: 5px 5px 0 5px;
 				.button2 {
 					padding: 0;
 					@include sizing(20px, 20px);
 					line-height: 20px;
-					margin: 0 5px 0 0;
+					margin: 0 $ffs 0 0;
 					border-radius: 100%;
 					font-weight: bold;
 					position: relative;
@@ -553,7 +551,7 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 			select, .inputbox {
 				@include flex(base);
 				& + .button2 {
-					margin: 0 0 0 5px;
+					margin: 0 0 0 $ffs;
 				}
 			}
 			.button2, select[name='move_to'], select[name='full_move_to'] {
@@ -609,7 +607,6 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 .section-ucp-manage-groups .cp-main {
 	#group_colour {
 		width: auto;
-		margin: 0 5px 0 0;
 	}
 	span[style*='background-color'] {
 		@include sizing(16px, 16px);
@@ -628,14 +625,8 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 	#post_details.scrollable {
 		@include scrollable;
 	}
-	.action-bar.bar-top {
-		.inputbox[type='search'] {
-			width: auto;
-			//margin: 0 3px 0 5px;
-		}
-		.button2[value='Search'] {
-			//margin-top: 0;
-		}
+	.action-bar.bar-top .inputbox[type='search'] {
+		width: auto;
 	}
 	.forum-selection, .action-bar.actions-jump, .tabs-container .minitabs {
 		position: absolute;
@@ -707,7 +698,7 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 		}
 	 	.button2 {
 			@include flex;
-			margin: 0 0 0 5px;
+			margin: 0 0 0 $ffs;
 		}
 	}
 	#mcp_chgposter fieldset dl dd {
@@ -737,7 +728,7 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 		select {
 			width: auto;
 			&#sk {
-				margin: 0 4px;
+				margin: 0 $ffs;
 			}
 		}
 		label {
@@ -797,7 +788,7 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 ========================================================================== */
 
 .section-mcp-warnings #warning {
-	& ~ br, & ~ .panel dt {
+	& ~ br, & ~ .panel .empty-space {
 		display: none;
 	}
 	& ~ .panel {
@@ -805,7 +796,7 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 		display: block;
 		padding: 0;
 		dd {
-			margin-left: -10px;
+			margin: 0 -10px;
 		}
 	}
 }
