--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -44,9 +44,9 @@ input[type='checkbox'], input[type='radio']  {
 
 label {
 	display: block;
-	margin: 0 0 5px 0;
+	margin: 0 0 $ffs 0;
 	input[type='checkbox'], input[type='radio'], input[type='number'].inputbox {
-		margin-right: 5px;
+		margin-right: $ffs;
 	}
 }
 
@@ -122,9 +122,9 @@ input[type='search']::-webkit-search-cancel-button {
 
 fieldset.submit-buttons {
 	text-align: center;
-	margin: 0 0 10px 0;
+	margin: 0 0 $ffs-minus 0;
 	.button1, .button2, .button3 {
-		margin-bottom: 10px;
+		margin-bottom: $ffs;
 	}
 }
 
@@ -152,7 +152,7 @@ fieldset dl:not(.pmlist) {
 fieldset:not(.polls) {
 	dl:not(.pmlist) {
 		dt {
-			width: $form-field-indent1;
+			width: $ffi-01;
 			label {
 				& + br {
 					display: none;
@@ -165,8 +165,8 @@ fieldset:not(.polls) {
 			}
 		}
 		dd {
-			margin-left: $form-field-indent1;
-			margin-bottom: 5px;
+			margin-left: $ffi-01;
+			margin-bottom: $ffs;
 			&:last-child {
 				margin-bottom: 0;
 			}
@@ -174,10 +174,10 @@ fieldset:not(.polls) {
 	}
 	&.fields1 dl:not(.pmlist) {
 		dt {
-			width: $form-field-indent2;
+			width: $ffi-02;
 		}
 		dd {
-			margin-left: $form-field-indent2;
+			margin-left: $ffi-02;
 		}
 	}
 }
