--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -132,7 +132,6 @@
 	}
 	& > ul {
 		margin: 0;
-		list-style: none;
 		& > li {
 			& > a {
 				padding: 0 20px;
@@ -263,8 +262,7 @@
 	.user-buttons {
 		text-align: center;
 		@include flex-flow(row wrap);
-		margin: 0 -2.5px 15px -2.5px;
-		list-style: none;
+		margin: 0 (-$ffs-half) $ffs-minus (-$ffs-half);
 		& > li {
 			@include flex(adapt);
 			&.toggle {
@@ -275,7 +273,7 @@
 			}
 			& > a {
 				display: block;
-				margin: 0 2.5px 5px 2.5px;
+				margin: 0 $ffs-half $ffs $ffs-half;
 				padding: 10px;
 				min-width: 80px;
 			}
@@ -329,7 +327,6 @@
 	}
 	ul {
 		margin: 0;
-		list-style: none;
 		li {
 			position: relative;
 			padding: 0 0 10px 0;
@@ -517,7 +514,6 @@
 		}
 	}
 	ul {
-		list-style: none;
 		margin: 0;
 		li {
 			border-top: 1px solid mix($color-01, $color-04, 05%);
@@ -579,7 +575,7 @@
 					padding: 0;
 				}
 				&#search-box {
-					padding: 20px 10px;
+					padding: 20px 20px 20px 10px;
 				}
 			}
 			&.dropdown-open {
