--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -96,7 +96,6 @@
 		background: $color-05;
 		border: 1px solid $color-03;
 		.dropdown-contents {
-			list-style: none;
 			margin: 0 0 -3px 0;
 			max-height: 300px;
 			overflow-y: auto;
@@ -159,7 +158,6 @@
 #nav-breadcrumbs {
 	margin: 0 0 30px 0;
 	ul {
-		list-style: none;
 		margin: 0 -2.5px;
 		li {
 			padding: 1.5px 2.5px;
@@ -233,35 +231,32 @@
 /* Pagination
 ========================================================================== */
 
-.pagination {
-	ul {
-		margin: 0 -5px;
-		list-style: none;
-		@include inline-block(bottom);
-		li {
-			@include inline-block(middle);
-			&.active span, a {
-				padding: 0 5px;
+.pagination ul {
+	margin: 0 -5px;
+	@include inline-block(bottom);
+	li {
+		@include inline-block(middle);
+		&.active span, a {
+			padding: 0 5px;
+		}
+		&.active span {
+			display: inline-block;
+			color: $color-06;
+			font-weight: bold;
+		}
+		a {
+			background: none;
+			border-radius: 0;
+			color: $color-01;
+			.icon {
+				font-size: rem(13px);
+				width: auto;
 			}
-			&.active span {
-				display: inline-block;
-				color: $color-06;
-				font-weight: bold;
-			}
-			a {
-				background: none;
-				border-radius: 0;
-				color: $color-01;
-				.icon {
-					font-size: rem(13px);
-					width: auto;
-				}
-				&, & .icon {
-					@include transition(color 0.3s ease-in-out);
-					&:hover {
-						color: $color-06;
-						background: none;
-					}
+			&, & .icon {
+				@include transition(color 0.3s ease-in-out);
+				&:hover {
+					color: $color-06;
+					background: none;
 				}
 			}
 		}
@@ -339,7 +334,7 @@
 		font-weight: bold;
 	}
 	&:first-child .jumpbox-cat-link {
-		margin: 0 0 10px 0;
+		margin-top: 0;
 	}
 }
 
@@ -546,7 +541,6 @@
 
 .tabs, .minitabs {
 	& > ul {
-		list-style: none;
 		margin: 0;
 		@include flex-flow(row wrap);
 		align-items: flex-end;
