--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -300,6 +300,24 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 	}
 }
 
+.section-ucp-manage-drafts .cp-main #postform fieldset {
+	position: relative;
+	padding-bottom: 40px;
+	#smiley-box {
+		@include sizing(auto, 20px);
+		float: none;
+		margin: 0;
+		padding: 0;
+		position: absolute;
+		bottom: 20px;
+		left: 0;
+		overflow: hidden;
+		strong {
+			font-weight: normal;
+		}
+	}
+}
+
 /* UCP - Attachments
 ========================================================================== */
 
